--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
@@ -243,7 +243,7 @@
                     <div class="comingsoon-content">
                         <ul class="upcoming-event-info">
                             <li>17 - 25 December 2018</li>
-                            <li>Tobacco Dock, London</li>
+                            <li>Quang Trung SC, Hồ Chí Minh City</li>
                         </ul>
                         <img src="~/Content/Template/eventalk/img/slider/slider-text-img.png" alt="slider" class="img-responsive">
                         <div class="countdown-layout3">
