chỉnh sửa font chữ

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -28,22 +28,22 @@
         <div class="col-sm-6">
             <div class="row">
                 <div class="col-sm-4 name-title">Event Name</div>
-                <div class="col-sm-8">@Html.Raw(Model.Name)</div>
+                <div class="col-sm-8 evtinfo">@Html.Raw(Model.Name)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">Time</div>
-                <div class="col-sm-8">@Html.Raw(Model.StartTime)</div>
+                <div class="col-sm-8 evtinfo">@Html.Raw(Model.StartTime)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">Address</div>
-                <div class="col-sm-8">@Html.Raw(Model.Address)</div>
+                <div class="col-sm-8 evtinfo">@Html.Raw(Model.Address)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">Description</div>
-                <div class="col-sm-8">@Html.Raw(Model.EventDescription)</div>
+                <div class="col-sm-8 evtinfo">@Html.Raw(Model.EventDescription)</div>
             </div>
         </div>
 
