Xóa màu thanh roll

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
     <!-- Font Icons CSS-->
     <link rel="stylesheet" href="~/Content/bootstrap/Dashboard/file.myfontastic.com/da58YPMQ7U5HY8Rb6UxkNf/icons.css">
 
+    <!--Custom Css-->
+    <link rel="stylesheet" href="~/Content/CustomCss/main.css">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
