--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
     <!-- Font Icons CSS-->
     <link rel="stylesheet" href="~/Content/bootstrap/Dashboard/file.myfontastic.com/da58YPMQ7U5HY8Rb6UxkNf/icons.css">
 
+    <!--Custom Css-->
+    <link rel="stylesheet" href="~/Content/CustomCss/main.css">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -40,19 +43,22 @@
             <div class="main-menu">
                 <ul id="side-main-menu" class="side-menu list-unstyled">
                     <li class="active"><a href="index-2.html"> <i class="icon-home"></i><span>Home</span></a></li>
-                    <li> <a href="forms.html"><i class="icon-form"></i><span>Forms</span></a></li>
-                    <li> <a href="charts.html"><i class="icon-presentation"></i><span>Charts</span></a></li>
-                    <li> <a href="tables.html"> <i class="icon-grid"> </i><span>Tables                        </span></a></li>
-                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Login page                        </span></a></li>
-                    <li>
-                        <a href="#">
-                            <i class="icon-mail"></i><span>Demo</span>
-                            <div class="badge badge-warning">6 New</div>
-                        </a>
-                    </li>
+                    <li> <a href="forms.html"><i class="icon-form"></i><span>Timeline</span></a></li>
+                    <li> <a href="charts.html"><i class="fa fa-question-circle"></i><span>Q&A</span></a></li>
+                    <li> <a href="tables.html"> <i class="fa fa-check-circle-o"> </i><span>Voting</span></a></li>
+                    <li> <a href="login.html"> <i class="fa fa-video-camera"></i><span>Livestream</span></a></li>
+                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Speaker</span></a></li>
+                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Sponsor</span></a></li>
+                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Logout</span></a></li>
+                    @*<li>
+            <a href="#">
+                <i class="icon-mail"></i><span>Demo</span>
+                <div class="badge badge-warning">6 New</div>
+            </a>
+        </li>*@
                 </ul>
             </div>
-            <div class="admin-menu">
+            @*<div class="admin-menu">
                 <ul id="side-admin-menu" class="side-menu list-unstyled">
                     <li>
                         <a href="#pages-nav-list" data-toggle="collapse" aria-expanded="false">
@@ -76,7 +82,7 @@
                     <li> <a href="#"> <i class="icon-flask"> </i><span>Demo</span></a></li>
                     <li> <a href="#"> <i class="icon-picture"> </i><span>Demo</span></a></li>
                 </ul>
-            </div>
+            </div>*@
         </div>
     </nav>
 
