Add thêm Signal R

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -47,42 +47,42 @@
                     <li> <a href="charts.html"><i class="fa fa-question-circle"></i><span>Q&A</span></a></li>
                     <li> <a href="tables.html"> <i class="fa fa-check-circle-o"> </i><span>Voting</span></a></li>
                     <li> <a href="login.html"> <i class="fa fa-video-camera"></i><span>Livestream</span></a></li>
-                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Speaker</span></a></li>
-                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Sponsor</span></a></li>
-                    <li> <a href="login.html"> <i class="icon-interface-windows"></i><span>Logout</span></a></li>
+                    <li> <a href="login.html"> <i class="fa fa-users"></i><span>Speaker</span></a></li>
+                    <li> <a href="login.html"> <i class="fa fa-users"></i><span>Sponsor</span></a></li>
+                    <li> <a href="login.html"> <i class="fa fa-sign-out"></i><span>Logout</span></a></li>
                     @*<li>
-            <a href="#">
-                <i class="icon-mail"></i><span>Demo</span>
-                <div class="badge badge-warning">6 New</div>
-            </a>
-        </li>*@
+                            <a href="#">
+                                <i class="icon-mail"></i><span>Demo</span>
+                                <div class="badge badge-warning">6 New</div>
+                            </a>
+                        </li>*@
                 </ul>
             </div>
             @*<div class="admin-menu">
-                <ul id="side-admin-menu" class="side-menu list-unstyled">
-                    <li>
-                        <a href="#pages-nav-list" data-toggle="collapse" aria-expanded="false">
-                            <i class="icon-interface-windows"></i><span>Dropdown</span>
-                            <div class="arrow pull-right"><i class="fa fa-angle-down"></i></div>
-                        </a>
-                        <ul id="pages-nav-list" class="collapse list-unstyled">
-                            <li> <a href="#">Page 1</a></li>
-                            <li> <a href="#">Page 2</a></li>
-                            <li> <a href="#">Page 3</a></li>
-                            <li> <a href="#">Page 4</a></li>
-                        </ul>
-                    </li>
-                    <li> <a href="#"> <i class="icon-screen"> </i><span>Demo</span></a></li>
-                    <li>
-                        <a href="#">
-                            <i class="icon-flask"> </i><span>Demo</span>
-                            <div class="badge badge-info">Special</div>
-                        </a>
-                    </li>
-                    <li> <a href="#"> <i class="icon-flask"> </i><span>Demo</span></a></li>
-                    <li> <a href="#"> <i class="icon-picture"> </i><span>Demo</span></a></li>
-                </ul>
-            </div>*@
+                    <ul id="side-admin-menu" class="side-menu list-unstyled">
+                        <li>
+                            <a href="#pages-nav-list" data-toggle="collapse" aria-expanded="false">
+                                <i class="icon-interface-windows"></i><span>Dropdown</span>
+                                <div class="arrow pull-right"><i class="fa fa-angle-down"></i></div>
+                            </a>
+                            <ul id="pages-nav-list" class="collapse list-unstyled">
+                                <li> <a href="#">Page 1</a></li>
+                                <li> <a href="#">Page 2</a></li>
+                                <li> <a href="#">Page 3</a></li>
+                                <li> <a href="#">Page 4</a></li>
+                            </ul>
+                        </li>
+                        <li> <a href="#"> <i class="icon-screen"> </i><span>Demo</span></a></li>
+                        <li>
+                            <a href="#">
+                                <i class="icon-flask"> </i><span>Demo</span>
+                                <div class="badge badge-info">Special</div>
+                            </a>
+                        </li>
+                        <li> <a href="#"> <i class="icon-flask"> </i><span>Demo</span></a></li>
+                        <li> <a href="#"> <i class="icon-picture"> </i><span>Demo</span></a></li>
+                    </ul>
+                </div>*@
         </div>
     </nav>
 
@@ -99,73 +99,73 @@
                         </div>
                         <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
                             @*<li class="nav-item dropdown">
-                                <a id="notifications" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-bell"></i><span class="badge badge-warning">12</span></a>
-                                <ul aria-labelledby="notifications" class="dropdown-menu">
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification d-flex justify-content-between">
-                                                <div class="notification-content"><i class="fa fa-envelope"></i>You have 6 new messages </div>
-                                                <div class="notification-time"><small>4 minutes ago</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification d-flex justify-content-between">
-                                                <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                                                <div class="notification-time"><small>4 minutes ago</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification d-flex justify-content-between">
-                                                <div class="notification-content"><i class="fa fa-upload"></i>Server Rebooted</div>
-                                                <div class="notification-time"><small>4 minutes ago</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item">
-                                            <div class="notification d-flex justify-content-between">
-                                                <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                                                <div class="notification-time"><small>10 minutes ago</small></div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-bell"></i>view all notifications                                            </strong></a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a id="messages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-envelope"></i><span class="badge badge-info">10</span></a>
-                                <ul aria-labelledby="notifications" class="dropdown-menu">
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
-                                                <h3 class="h5">Jason Doe</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-2.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
-                                                <h3 class="h5">Frank Williams</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                            <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-3.jpg" alt="..." class="img-fluid rounded-circle"></div>
-                                            <div class="msg-body">
-                                                <h3 class="h5">Ashley Wood</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-envelope"></i>Read all messages    </strong></a></li>
-                                </ul>
-                            </li>*@
+                                    <a id="notifications" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-bell"></i><span class="badge badge-warning">12</span></a>
+                                    <ul aria-labelledby="notifications" class="dropdown-menu">
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item">
+                                                <div class="notification d-flex justify-content-between">
+                                                    <div class="notification-content"><i class="fa fa-envelope"></i>You have 6 new messages </div>
+                                                    <div class="notification-time"><small>4 minutes ago</small></div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item">
+                                                <div class="notification d-flex justify-content-between">
+                                                    <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
+                                                    <div class="notification-time"><small>4 minutes ago</small></div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item">
+                                                <div class="notification d-flex justify-content-between">
+                                                    <div class="notification-content"><i class="fa fa-upload"></i>Server Rebooted</div>
+                                                    <div class="notification-time"><small>4 minutes ago</small></div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item">
+                                                <div class="notification d-flex justify-content-between">
+                                                    <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
+                                                    <div class="notification-time"><small>10 minutes ago</small></div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-bell"></i>view all notifications                                            </strong></a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a id="messages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-envelope"></i><span class="badge badge-info">10</span></a>
+                                    <ul aria-labelledby="notifications" class="dropdown-menu">
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item d-flex">
+                                                <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
+                                                <div class="msg-body">
+                                                    <h3 class="h5">Jason Doe</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item d-flex">
+                                                <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-2.jpg" alt="..." class="img-fluid rounded-circle"></div>
+                                                <div class="msg-body">
+                                                    <h3 class="h5">Frank Williams</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a rel="nofollow" href="#" class="dropdown-item d-flex">
+                                                <div class="msg-profile"> <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-3.jpg" alt="..." class="img-fluid rounded-circle"></div>
+                                                <div class="msg-body">
+                                                    <h3 class="h5">Ashley Wood</h3><span>sent you a direct message</span><small>3 days ago at 7:58 pm - 10.06.2014</small>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-envelope"></i>Read all messages    </strong></a></li>
+                                    </ul>
+                                </li>*@
                             <li class="nav-item"><a href="login.html" class="nav-link logout">Logout<i class="fa fa-sign-out"></i></a></li>
                         </ul>
                     </div>
@@ -211,19 +211,22 @@
     <script src="~/Content/bootstrap/Dashboard/www.google-analytics.com/analytics.js"></script>
     <script src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/js/front.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
+    <!--Signal R-->
+    <script src="~/signalr/hubs"></script>
+    <script src="~/Scripts/jquery.signalR-2.2.3.min.js"></script>
 
 
     @RenderSection("scripts", required: false)
     <!---->
     <script>
-                                        //    (function (b, o, i, l, e, r) {
-                                        //        b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                                        //            function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
-                                        //        e = o.createElement(i); r = o.getElementsByTagName(i)[0];
-                                        //        e.src = '~/Content/bootstrap/Dashboard/www.google-analytics.com/analytics.js';
-                                        //        r.parentNode.insertBefore(e, r)
-                                        //    }(window, document, 'script', 'ga'));
-                                        //ga('create', 'UA-XXXXX-X'); ga('send', 'pageview');
+                                                        //    (function (b, o, i, l, e, r) {
+                                                        //        b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                                                        //            function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                                                        //        e = o.createElement(i); r = o.getElementsByTagName(i)[0];
+                                                        //        e.src = '~/Content/bootstrap/Dashboard/www.google-analytics.com/analytics.js';
+                                                        //        r.parentNode.insertBefore(e, r)
+                                                        //    }(window, document, 'script', 'ga'));
+                                                        //ga('create', 'UA-XXXXX-X'); ga('send', 'pageview');
 
     </script>
 
