--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                     <span>Edit</span>
                 </a>
 
-                <a class="btn btn-primary">
+                <a class="btn btn-primary @(Model != null ? Model.EventID != 0 ? "a" : "" : "")">
                     <i class="fa fa-eye" aria-hidden="true"></i>
                     <span>View</span>
                 </a>
