chinh lai trang Edit

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
@@ -13,3 +13,11 @@
 .evtinfo{
     margin-top:10px;
 }
+
+.leftside{
+    margin-left:250px;
+}
+
+.input-group-addon:first-child {
+    width:40px;
+}
