+ Làm signal R trong trang Q&A + Dời test signal R từ Home qua Q&A Controller

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -36,7 +36,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-clock-o"></i>
                         </div>
-                        <input type="text" class="form-control pull-right" id="reservationtime" placeholder="Pick time's event">
+                        <input type="text" class="form-control pull-right" id="reservation" placeholder="Pick time's event">
                     </div>
                 </div>
 
