Update Client Speaker + Sponsor ( Css, Popup-Modal )

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -6,16 +6,16 @@
 
 <div class="container-fluid">
     <div class="animated fadeIn">
-        <div class="event-banner" style="position: relative; height: auto;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); margin-top: 30px;">
-            <img style="width:100%;height:auto" src="~/Content/img/new_statesman_events.jpg">
-            <div class="header" style="position: absolute;bottom: 15px;background: rgba(12, 12, 12, 0.5);">
-                <h3 class="event-name text-white" style="padding: 10px 20px; font-size:1em;">The Capstone Project Defense Ceremony</h3>
+        <div class="event-banner">
+            <img class="event-banner-image" src="~/Content/img/new_statesman_events.jpg">
+            <div class="header event-header">
+                <h3 class="event-name text-white">The Capstone Project Defense Ceremony</h3>
             </div>
         </div>
         <br>
     </div>
     <div class="animated fadeIn">
-        <div class="card-content" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); background: white; border: 1px solid #dbdee0; margin-bottom: 15px; padding: 20px;">
+        <div class="card-content event-card-content">
             <div class="description p-10">
                 <h4 class="section-title">Introduction</h4>
                 <div class="row">
