--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
 
     <!--Custom Css-->
     <link rel="stylesheet" href="~/Content/CustomCss/main.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/sponsor.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/speaker.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/home.css">
+
+
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
