--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
@@ -7,18 +7,36 @@
 
 @{
     var listSponsor = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 3).CollectionItems;
+
 }
 <div class="row">
     @{
+        int i = 0;
         foreach (var item in listSponsor)
         {
             <div class="col-md-3 col-sm-6 col-12">
-                <div class="sponsonrs-box">
-                    <a href="#">
-                        <img src="@(item.ImageUrl)" alt="brand" class="img-fluid">
-                    </a>
+                <div class="boxShadow">
+                    <a href="" data-toggle="modal" data-target="#sponsorModal@(i)"><img src="@(item.ImageUrl)" alt="brand" class="img-fluid image-sponsor-custom"></a>
                 </div>
             </div>
+            <div id="sponsorModal@(i)" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">@(item.Name)</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>@(item.Desciption)</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            i++;
         }
     }
 
