--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="~/Content/CustomCss/sponsor.css">
     <link rel="stylesheet" href="~/Content/CustomCss/speaker.css">
     <link rel="stylesheet" href="~/Content/CustomCss/home.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/timeline.css">
+
 
 
 
