--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -15,7 +15,7 @@
         foreach (var item in listSpeaker)
         {
             <div class="col-md-4 col-sm-8 col-12">
-                <div class="boxShadow">
+                <div class="box-speaker-shadow">
                         <a href="" id="speaker-modal" data-toggle="modal" data-target="#speakerModal@(i)"><img class="img-fluid image-speaker-custom" src="@(item.ImageUrl)" alt="brand"></a>
                     <div class="item-title">
                         <h3 class="title title-medium" style="text-align:center">
@@ -33,7 +33,7 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <p>@(item.Desciption)</p>
+                            <p>@(item.Description)</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
