--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -2,6 +2,4 @@
 @{
     ViewBag.Title = "Livestream";
 }
-
-<h2>Livestream</h2>
-
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/2ccaHpy5Ewo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
