--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
 
     <!--Custom Css-->
     <link rel="stylesheet" href="~/Content/CustomCss/admin.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/sponsor.css">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
@@ -50,7 +52,7 @@
     <script src="~/Content/AdminLTE-master/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Morris.js charts -->
     @*<script src="~/Content/AdminLTE-master/bower_components/raphael/raphael.min.js"></script>
-    <script src="~/Content/AdminLTE-master/bower_components/morris.js/morris.min.js"></script>*@
+        <script src="~/Content/AdminLTE-master/bower_components/morris.js/morris.min.js"></script>*@
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script src="~/Content/AdminLTE-master/dist/js/pages/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
@@ -399,10 +401,10 @@
                     <li><a><i class="icon-form"></i> <span>Timeline</span></a></li>
                     <li><a><i class="fa fa-question-circle"></i> <span>Q&A</span></a></li>
                     <li><a><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
-                    <li><a><i class="fa fa-video-camera"></i> <span>Livestream</span></a></li>
-                    <li><a><i class="fa fa-users"></i> <span>Speaker</span></a></li>
-                    <li><a><i class="fa fa-users"></i> <span>Sponsor</span></a></li>
-                    <li><a><i class="fa fa-sign-out"></i> <span>Sponsor</span></a></li>
+                    <li><a href="@Url.Action("Index","Livestream")"><i class="fa fa-video-camera"></i> <span>Livestream</span></a></li>
+                    <li><a href="@Url.Action("Index","Speaker")"><i class="fa fa-users"></i> <span>Speaker</span></a></li>
+                    <li><a href="@Url.Action("Index","Sponsor")"><i class="fa fa-users"></i> <span>Sponsor</span></a></li>
+                    <li><a><i class="fa fa-sign-out"></i> <span>Sign out</span></a></li>
                     @*<li class="treeview">
             <a href="#">
                 <i class="icon-form"></i><span>Timeline</span>
@@ -593,9 +595,7 @@
             //Date range picker
             $('#reservation').daterangepicker();
 
-            $('#reservation').on("focus", function () {
-                console.log("AAA");
-            });
+
 
         });
     </script>
