--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -2,6 +2,70 @@
 @{
     ViewBag.Title = "Voting";
 }
+@using HmsService.Models.Entities;
 
-<h2>Voting</h2>
+@model Voting
+@{
+    var votingQuestion = Model.VotingQuestions.FirstOrDefault(e => e.VotingId == 1).VotingQuestionDetail;
+    var listQuestionOptions = Model.VotingQuestions.FirstOrDefault(e => e.VotingQuestionId == 1).VotingOptions;
+}
 
+<link href="~/Content/bootstrap/Poll/css/bootstrap.css" rel="stylesheet" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2>Bootstrap Poll Example</h2>
+            <br />
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="user-poll-section">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <strong>Question : </strong>@votingQuestion
+
+                    </div>
+                    <div class="panel-body">
+                        @{
+                            int i = 0;
+                            foreach (var item in listQuestionOptions)
+                            {
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="group-poll">
+                                        <strong>i.  </strong>@item.VotingOptionDetail
+                                    </label>
+                                </div>
+                                i++;
+                            }
+                        }
+                        <hr />
+                        <h5 class="text-danger">Result Of User Votes :</h5>
+                        <hr />
+                        @{
+                                int j = 1;
+                                string classId = "myBar" + j;
+                                string percentId = "demo" + j;
+                                foreach (var item in listQuestionOptions)
+                                {
+                                    @item.VotingOptionDetail  <span id="@(percentId)">:</span> 
+                                <div class="progress progress-striped active">
+                                <div id="@classId"class="progress-bar progress-bar-danger" style="width: 0%">
+                                </div>
+                                </div>
+                                    }
+                        }
+                    </div>
+                    <div class="panel-footer">
+                        <a href="#" class="btn btn-success btn-sm" onclick="move()"><span class="glyphicon glyphicon-bell"></span> Mark Your Vote</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="~/Content/bootstrap/Poll/js/jquery-1.11.1.js"></script>
+<script src="~/Content/bootstrap/Poll/js/bootstrap.js"></script>
+<script src="~/Content/bootstrap/Poll/js/processBar.js"></script>
