--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -6,11 +6,11 @@
 }
 
 @*<div class="container">
-    <input type="text" id="message" />
-    <input type="button" id="sendmessage" value="Send" />
-    <input type="hidden" id="displayname" />
-    <ul id="discussion"></ul>
-</div>*@
+        <input type="text" id="message" />
+        <input type="button" id="sendmessage" value="Send" />
+        <input type="hidden" id="displayname" />
+        <ul id="discussion"></ul>
+    </div>*@
 
 <div class="container">
     <!-- Trigger the modal with a button -->
@@ -23,36 +23,34 @@
             <button type="button" class="btn btn-default btn-sm">Hotest Question</button>
         </div>
     </div>
-    
+
     <div class="col-md-12 col-xs-12">
         <div class="row qa-container" id="qa-container">
             @foreach (var item in Model.Questions)
             {
-            <div class="card list-qa">
-                <div class="card main-qa">
-                    <span class="username-content">@(item.Username): @(item.QuestionContent)</span>
-                    <p class="like-rep">
-                        <span><i class="fa fa-thumbs-o-up" aria-hidden="true"> @(item.NumberOfLike)</i></span>
-                        <span class="btn-reply" data-toggle="modal" data-target="#myModal"><i class="fa fa-reply" aria-hidden="true"></i> Reply</span>
-                        <input type="hidden" value="@(item.QuestionId)" />
-                    </p>
-                    <span class="create-time">@(item.CreateTime)</span>
+                <div class="card list-qa">
+                    <div class="card main-qa">
+                        <span class="username-content">@(item.Username): @(item.QuestionContent)</span>
+                        <p class="like-rep">
+                            <button class="btn btn-primary btn-sm"><i class="fa fa-thumbs-o-up" aria-hidden="true"> @(item.NumberOfLike)</i></button>
+                            <button class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
+                        </p>
+                        <span class="create-time">@(item.CreateTime)</span>
+
+                    </div>
+
+                    @foreach (var subItem in item.Comments)
+                    {
+                        <div class="card-header list-answer">
+                            <span>@(subItem.Username): </span>
+                            <span>@(subItem.CommentContent)</span>
+                            <br />
+                            <span>@(subItem.CreateTime)</span>
+                            <br />
+                        </div>
+                    }
 
                 </div>
-                
-                @foreach (var subItem in item.Comments)
-                {
-                <div class="card-header list-answer">
-                    <span>@(subItem.Username): </span>
-                    <span>@(subItem.CommentContent)</span>
-                    <br />
-                    <span>@(subItem.CreateTime)</span>
-                    <br />
-
-                </div>
-                }
-
-            </div>
             }
 
         </div>
@@ -64,8 +62,10 @@
     <div class="card list-qa">
         <div class="card main-qa">
             <span class="username-content"></span>
-            <i class="fa fa-thumbs-o-up" aria-hidden="true"><span class="number-of-like"> &nbsp; &nbsp; <i class="fa fa-reply" aria-hidden="true"></i>&nbsp; Reply</span></i>
-
+            <p class="like-rep">
+                <button class="btn btn-primary btn-sm"><i class="fa fa-thumbs-o-up" aria-hidden="true"> 0</i></button>
+                <button class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
+            </p>
             <span class="create-time"></span>
 
         </div>
@@ -94,11 +94,42 @@
                     <label>Content</label>
                     <textarea class="form-control" id="txtContent"></textarea>
                 </div>
-                <input type="checkbox" id="btnHiddenUser"  /> Post with incognito
-                
+                <input type="checkbox" id="btnHiddenUser" /> Post with incognito
+
             </div>
             <div class="modal-footer">
                 <button id="btnSendQuestion" type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- Modal Post New Question -->
+<div class="modal fade" id="modalReply" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Post Reply</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Input your name</label>
+                    <input type="text" id="txtUsernameReply" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Content</label>
+                    <textarea class="form-control" id="txtContentReply"></textarea>
+                </div>
+                <input type="checkbox" id="btnHiddenUser" /> Post with incognito
+
+            </div>
+            <div class="modal-footer">
+                <button id="btnSendReply" type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -127,26 +158,33 @@
                         data: {
                             Username: $('#txtUsername').val(),
                             QuestionContent: $('#txtContent').val()
+
                         },
                         success: function () {
-                            var listQa = $('#list-qa').clone();
-                            listQa.find('.username-content').html($('#txtUsername').val() + ": " + $('#txtContent').val());
-                            listQa.find('.create-time').html(new Date().toLocaleString("en-GB"));
-                            listQa.find('.number-of-like').html('0');
-                            $('#qa-container').append(listQa.html());
+                            $('#txtUsername').val("");
+                            $('#txtContent').val("");
                         },
                         error: function (data) {
                             console.log(data);
                         }
                     });
                 });
+
+                $('#btnSendQuestion').click(function () {
+                    chat.server.send($('#txtUsernameReply').val(), $('#txtContentReply').val());
+
+
+                });
             });
 
             // Create a function that the hub can call back to display messages.
             chat.client.addNewMessageToPage = function (name, message) {
                 // Add the message to the page.
-                $('#discussion').append('<li><strong>' + htmlEncode(name)
-                    + '</strong>: ' + htmlEncode(message) + '</li>');
+                var listQa = $('#list-qa').clone();
+                listQa.find('.username-content').html(name + ": " + message);
+                listQa.find('.create-time').html(new Date().toLocaleString("en-GB"));
+                listQa.find('.number-of-like').html('0');
+                $('#qa-container').append(listQa.html());
             };
 
 
@@ -161,7 +199,7 @@
         }
 
 
-        
+
     </script>
 }
 
